--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -33,6 +33,9 @@
         </tr>
         {{/each}}
     </tbody>
+    <br>
+    <br>
+    <br>
     <form id="addproduct" class="form-horizontal" action="beauty" method="post">
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Brand:</label>
@@ -48,6 +51,7 @@
         </div>
         <div class="form-group">
             <label for="sel1">Category:</label>
+            <div class="col-sm-10"></div>
             <select class="form-control" id="sel1">
                 <option>skincare</option>
                 <option>makeup</option>
