--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -51,8 +51,7 @@
         </div>
         <div class="form-group">
             <label for="sel1">Category:</label>
-            <div class="col-sm-10"></div>
-            <select class="form-control" id="sel1">
+            <select class="col-sm-10" id="sel1">
                 <option>skincare</option>
                 <option>makeup</option>
                 <option>haircare</option>
