--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="sel1">Category:</label>
+            <label for="sel1" class="control-label col-sm-2">Category:</label>
             <select class="col-sm-10" id="sel1">
                 <option>skincare</option>
                 <option>makeup</option>
