--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -35,7 +35,6 @@
     </tbody>
     <br>
     <br>
-    <br>
     <form id="addproduct" class="form-horizontal" action="beauty" method="post">
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Brand:</label>
@@ -50,13 +49,13 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="sel1" class="control-label col-sm-2">Category:</label>
-            <select class="col-sm-10" id="sel1">
+            <label for="cetegory" class="control-label col-sm-2">Category:</label>
+            {{!-- <select class="col-sm-10">
                 <option>skincare</option>
                 <option>makeup</option>
                 <option>haircare</option>
                 <option>bodycare</option>
-            </select>
+            </select> --}}
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Description:</label>
