--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -50,12 +50,12 @@
         </div>
         <div class="form-group">
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
-            {{!-- <select class="col-sm-10">
+            <select>
                 <option>skincare</option>
                 <option>makeup</option>
                 <option>haircare</option>
                 <option>bodycare</option>
-            </select> --}}
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Description:</label>
