--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -51,10 +51,9 @@
         <div class="form-group">
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
             <select>
-                <option>skincare</option>
-                <option>makeup</option>
-                <option>haircare</option>
-                <option>bodycare</option>
+                {{#each products}}
+                <option value="{{id}}">{{category}}</option>
+                {{/each}}
             </select>
         </div>
         <div class="form-group">
@@ -71,8 +70,10 @@
         </div>
         <div class="form-group"> 
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </form>
+    <br>
+    <br>
 </table>
