--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -52,7 +52,7 @@
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
             <select>
                 {{#each products}}
-                <option value="{{id}}">{{category}}</option>
+                <option value="{{category}}">{{category}}</option>
                 {{/each}}
             </select>
         </div>
