--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -51,9 +51,10 @@
         <div class="form-group">
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
             <select>
-                {{#each products}}
-                <option value="{{category}}">{{category}}</option>
-                {{/each}}
+                <option>skincare</option>
+                <option>makeup</option>
+                <option>haircare</option>
+                <option>bodycare</option>
             </select>
         </div>
         <div class="form-group">
