--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,5 +1,4 @@
-<h1>TEST BEAUTY PRODUCTS:</h1>
-<h1>Handlebars JS Example</h1>
+<h1>Good BEAUTY PRODUCTS:</h1>
 {{#each foo}}
 {{this}}
 {{/each}}
@@ -53,12 +52,12 @@
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="name" placeholder="Enter Product Name" name="name">
             </div>
-            {{!-- <select>
+            <select>
                 <option>skincare</option>
                 <option>makeup</option>
                 <option>haircare</option>
                 <option>bodycare</option>
-            </select> --}}
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Description:</label>
