--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -49,10 +49,7 @@
         </div>
         <div class="form-group">
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" placeholder="Enter Product Name" name="name">
-            </div>
-            <select>
+            <select class="form-control" name="category">
                 <option>skincare</option>
                 <option>makeup</option>
                 <option>haircare</option>
