--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -49,7 +49,7 @@
         </div>
         <div class="form-group">
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
-            <select class="form-control col-sm-10" name="category">
+            <select class="form-control" id="category" name="category">
                 <option>skincare</option>
                 <option>makeup</option>
                 <option>haircare</option>
