--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -29,7 +29,7 @@
             <td>{{category}}</td>
             <td>{{description}}</td>
             <td>{{ingredient}}</td>
-            <td><button type="button" class="btn btn-info">Info</button></td>
+            <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
             <td><button type="button" class="btn btn-danger">Danger</button></td>
         </tr>
         {{/each}}
