--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -30,7 +30,7 @@
             <td>{{description}}</td>
             <td>{{ingredient}}</td>
             <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
-            <td><button type="button" class="btn btn-danger">Danger</button></td>
+            <td><button type="button" class="btn btn-danger">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
