--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -28,7 +28,7 @@
             <td>{{description}}</td>
             <td>{{ingredient}}</td>
             <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
-            <td><button type="button" class="btn btn-danger" onclick="deletePerson({{id}})">Delete</button></td>
+            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
