--- a/views/update-product.handlebars
+++ b/views/update-product.handlebars
@@ -33,9 +33,14 @@
             <input type="textarea" class="form-control" id="ingredient" value="{{product.ingredient}}" name="ingredient">
         </div>
     </div>
-    <div class="form-group"> 
-        <div class="col-sm-offset-2 col-sm-10">
-            <button class="btn btn-info" onclick="updateProduct({{product.id}})">Update</button>
-        </div>
-    </div>
 </form>
+<div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+        <button class="btn btn-info" onclick="updateProduct({{product.id}})">Update</button>
+    </div>
+</div>
+<div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+        <button class="btn btn-default"><a href="/beauty">Cancel</a></button>
+    </div>
+</div>
