--- a/views/update-product.handlebars
+++ b/views/update-product.handlebars
@@ -33,11 +33,11 @@
             <input type="textarea" class="form-control" id="ingredient" value="{{product.ingredient}}" name="ingredient">
         </div>
     </div>
-    <div class="form-group"> 
+    {{!-- <div class="form-group"> 
         <div class="col-sm-offset-2 col-sm-10">
             <button onclick="updateProduct({{product.id}})" class="btn btn-info">Update</button>
         </div>
-    </div>
+    </div> --}}
     <div class="form-group"> 
         <div class="col-sm-offset-2 col-sm-10">
             <button class="btn btn-default"><a href="/beauty">Cancel</a></button>
