--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,1 +1,23 @@
 <h1>Reviews on {{product.brand}} {{product.name}}:</h1>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Comments</th>
+            <th>Update</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each reviews}} 
+        <tr>
+            <td>{{name}}</td>
+            <td>{{comment}}</td>
+            {{!-- <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
+            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td> --}}
+        </tr>
+        {{/each}}
+    </tbody>
+    <br>
+    <br>
+</table>
