--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -19,5 +19,6 @@
         {{/each}}
     </tbody>
     <br>
+    <button class="btn btn-default"><a href="/beauty">Go Back</a></button>
     <br>
 </table>
