--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,5 +1,5 @@
 <h1>Reviews on {{product.brand}} {{product.name}}:</h1>
-<table class="table table-striped">
+{{!-- <table class="table table-striped">
     <thead>
         <tr>
             <th>Name</th>
@@ -21,4 +21,4 @@
     <br>
     <button class="btn btn-default"><a href="/beauty">Go Back</a></button>
     <br>
-</table>
+</table> --}}
