--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -13,8 +13,8 @@
         <tr>
             <td>name</td>
             <td>{{comment}}</td>
-            {{!-- <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
-            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td> --}}
+            <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
+            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
