--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,5 +1,5 @@
 <h1>Reviews on {{product.brand}} {{product.name}}:</h1>
-{{!-- <table class="table table-striped">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Name</th>
@@ -13,12 +13,12 @@
         <tr>
             <td>name</td>
             <td>{{comment}}</td>
-            <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
-            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td>
+            {{!-- <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
+            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td> --}}
         </tr>
         {{/each}}
     </tbody>
     <br>
     <button class="btn btn-default"><a href="/beauty">Go Back</a></button>
     <br>
-</table> --}}
+</table>
