--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -11,7 +11,7 @@
     <tbody>
         {{#each reviews}} 
         <tr>
-            <td>name</td>
+            <td>{{name}}</td>
             <td>{{comment}}</td>
             {{!-- <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
             <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td> --}}
