--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,4 +1,4 @@
-<h1>Reviews on {{brand}} {{name}}:</h1>
+<h1>Reviews on {{reviews.brand}} {{reviews.name}}:</h1>
 <table class="table table-striped">
     <thead>
         <tr>
