--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,4 +1,6 @@
+{{#each reviews}} 
 <h1>Reviews on {{product.brand}} {{product.name}}:</h1>
+{{/each}}
 <table class="table table-striped">
     <thead>
         <tr>
