--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,6 +1,4 @@
-{{#each reviews}} 
-<h1>Reviews on {{product.brand}} {{product.name}}:</h1>
-{{/each}}
+<h1>Reviews on {{reviews.brand}} {{reviews.name}}:</h1>
 <table class="table table-striped">
     <thead>
         <tr>
