--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -12,7 +12,7 @@
         {{#each reviews}} 
         <tr>
             <td>name</td>
-            <td>{{reviews.comment}}</td>
+            <td>{{comment}}</td>
             {{!-- <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
             <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td> --}}
         </tr>
