--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -22,3 +22,22 @@
     <button class="btn btn-default"><a href="/beauty">Go Back</a></button>
     <br>
 </table>
+<form id="addreview" class="form-horizontal" action="beauty" method="post">
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="brand">Name:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="name" placeholder="Enter Your Name" name="name">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="brand">Password:</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password">
+        </div>
+    </div>
+    <div class="form-group"> 
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+</form>
