--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -35,6 +35,12 @@
             <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password">
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="brand">Comments:</label>
+        <div class="col-sm-10">
+            <input type="textarea" class="form-control" id="comment" placeholder="Enter comments" name="comment">
+        </div>
+    </div>
     <div class="form-group"> 
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary">Submit</button>
