--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -22,7 +22,7 @@
     <button class="btn btn-default"><a href="/beauty">Go Back</a></button>
     <br>
 </table>
-<form id="addreview" class="form-horizontal" action="{{product.id}}" method="post">
+<form id="addreview" class="form-horizontal" action="/{{product.id}}" method="post">
     <div class="form-group">
         <label class="control-label col-sm-2" for="brand">Name:</label>
         <div class="col-sm-10">
