--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -4,7 +4,6 @@
         <tr>
             <th>Name</th>
             <th>Comments</th>
-            <th>Update</th>
             <th>Delete</th>
         </tr>
     </thead>
@@ -13,8 +12,7 @@
         <tr>
             <td>name</td>
             <td>{{comment}}</td>
-            {{!-- <td><button type="button" class="btn btn-info"><a href="/beauty/{{id}}">Update</a></button></td>
-            <td><button type="button" class="btn btn-danger" onclick="deleteProduct({{id}})">Delete</button></td> --}}
+            <td><button type="button" class="btn btn-danger" onclick="deleteReview({{id}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
