--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -12,7 +12,7 @@
         <tr>
             <td>name</td>
             <td>{{comment}}</td>
-            <td><button type="button" class="btn btn-danger" onclick="deleteReview({{id}})">Delete</button></td>
+            <td><button type="button" class="btn btn-danger" onclick="deleteReview({{rid}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
