--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,5 +1,11 @@
 <h1>Reviews on</h1>
 <h1>{{product.brand}} {{product.name}}:</h1>
+<h2>Buy the it from here:</h2>
+{{!-- {{#each reviews}} 
+<ul>
+    <li></li>
+</ul>
+{{/each}} --}}
 <table class="table table-striped">
     <thead>
         <tr>
