--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,7 +1,6 @@
 <h1>Good BEAUTY PRODUCTS:</h1>
-{{#each foo}}
-{{this}}
-{{/each}}
+
+{{products}}
 
 <h1>Beauty Bucket List</h1>
 <p>These featured items are "Good" beauty products contains no hazard ingredients.</p>
