--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -73,6 +73,12 @@
                 {{/each}}
             </select>
         </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="brand">Link:</label>
+            <div class="col-sm-10">
+                <input type="textarea" class="form-control" id="link" placeholder="Enter Address" name="link">
+            </div>
+        </div>
         <div class="form-group"> 
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-primary">Submit</button>
