--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,11 +1,12 @@
 <h1>Reviews on</h1>
 <h1>{{product.brand}} {{product.name}}:</h1>
 <h2>Buy the it from here:</h2>
-{{#each seller}} 
+{{!-- {{#each seller}} 
 <ul>
     <li>{{name}}</li>
 </ul>
-{{/each}}
+{{/each}} --}}
+<h2>{{seller.name}}</h2>
 <table class="table table-striped">
     <thead>
         <tr>
