--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -6,7 +6,7 @@
     <li>{{name}}</li>
 </ul>
 {{/each}} --}}
-<h2>{{seller.name}}</h2>
+<h2>{{product.seller.name}}</h2>
 <table class="table table-striped">
     <thead>
         <tr>
