--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,7 +1,7 @@
 <h1>Reviews on</h1>
 <h1>{{product.brand}} {{product.name}}:</h1>
 <h2>Buy the it from here:</h2>
-{{#each sellers}} 
+{{#each product.sellers}} 
 <ul>
     <li>{{name}}</li>
 </ul>
