--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -1,9 +1,9 @@
 <h1>Reviews on</h1>
 <h1>{{product.brand}} {{product.name}}:</h1>
 <h2>Buy the it from here:</h2>
-{{#each product.sellers}} 
+{{#each sellers}} 
 <ul>
-    <li>{{name}}</li>
+    <li>{{name}} {{link}}</li>
 </ul>
 {{/each}}
 
