--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -46,12 +46,14 @@
         </div>
         <div class="form-group">
             <label for="cetegory" class="control-label col-sm-2">Category:</label>
-            <select class="form-control" id="category" name="category">
-                <option>skincare</option>
-                <option>makeup</option>
-                <option>haircare</option>
-                <option>bodycare</option>
-            </select>
+            <div class="col-sm-10">
+                <select class="form-control" id="category" name="category">
+                    <option>skincare</option>
+                    <option>makeup</option>
+                    <option>haircare</option>
+                    <option>bodycare</option>
+                </select>
+            </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Description:</label>
