--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -69,11 +69,13 @@
         </div>
         <div class="form-group">
             <label for="seller" class="control-label col-sm-2">Seller:</label>
-            <select class="form-control" id="seller" name="seller">
-                {{#each sellers}}
-                <option value="{{id}}">{{name}}</option>
-                {{/each}}
-            </select>
+            <div class="col-sm-10">
+                <select class="form-control" id="seller" name="seller">
+                    {{#each sellers}}
+                    <option value="{{id}}">{{name}}</option>
+                    {{/each}}
+                </select>
+            </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="brand">Link:</label>
