--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -28,6 +28,7 @@
     <button class="btn btn-default"><a href="/beauty">Go Back</a></button>
     <br>
 </table>
+<h3>Add comment on this product as anonymous user.</h3>
 <form id="addreview" class="form-horizontal" action="/beauty/reviews/{{product.id}}" method="post">
     <div class="form-group">
         <label class="control-label col-sm-2" for="brand">Name:</label>
