--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -4,6 +4,7 @@
 <p>These featured items are "Good" beauty products contains no hazard ingredients.</p>
 <p>Viewers can veiw the items and can give feedback on them.</p>
 <p>Click name of the product to see reviews and where to buy.</p>
+<p>(This table is only shwon by web page owner)</p>
 <table class="table table-striped">
     <thead>
         <tr>
